Fixed Oracle Logo
Logo is no longer clipped off on the bottom and right sides in the corner of the webpage

--- a/NetsuiteDark.user.css
+++ b/NetsuiteDark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Netsuite Dark Theme - Tierney
 @namespace      totallytrav
-@version        1.0.34
+@version        1.0.35
 @description    Custom Tierney Netsuite theme
 @author         Travis Olson
 @homepageURL	https://github.com/totallytrav/NetsuiteDark
@@ -27,16 +27,16 @@
 	}
 
 	#ns_header #devpgloadtime img {
-		max-width: 212px;
+		max-width: 229.156px;
 		filter: contrast(0%) brightness(1000%);
 		background-color: #ffffff00;
 		display: block;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 		background: url(https://system.na2.netsuite.com/images/logos/netsuite-oracle.svg) no-repeat;
-		width: 212px;
-		height: 22px;
-		padding-left: 212px;
+		width: 229.156px;
+		height: 29.984px;
+		padding-left: 229.156px;
 	}
 
 	#ns_header .ns-logo {
